force-app/main/default/objects/Parts_Inventory__c/Parts_Inventory__c.object-meta.xml
<CustomObject>
    <label>Parts Inventory</label>
    <nameField>
        <label>Parts Inventory Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>