force-app/main/default/objects/Parts_Inventory__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Name</label>
    <type>Text</type>
</CustomField>