force-app/main/default/objects/Parts_Inventory__c/fields/Parts_Inventory_No__c.field-meta.xml
<CustomField>
    <fullName>Parts_Inventory_No__c</fullName>
    <displayFormat>PI-{00000}</displayFormat>
    <label>Parts Inventory No</label>
    <type>AutoNumber</type>
</CustomField>