force-app/main/default/objects/Parts_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts Inventory</relationshipLabel>
    <relationshipName>Parts_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>