force-app/main/default/objects/Parts_Inventory__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <summarizedField>Parts_Inventory_Transaction__c.Updated_Quantity__c</summarizedField>
    <summaryForeignKey>Parts_Inventory_Transaction__c.Parts_Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>