force-app/main/default/objects/Parts_Inventory__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Parts Inventory</relationshipLabel>
    <relationshipName>Parts_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>